# dam-log-scanner

./: .dockerignore  .gitignore  Dockerfile  dbclass.py  main.py  opa-sidecar.yaml  pyproject.toml
FilteringServices/: db.py
fastapi-k8s-deployment/: fastapi-deployment.yml  fastapi-ingress.yml  fastapi-service.yml
helm-charts/kafka/: values.yaml
helm-charts/oracle-db/: values.yaml
helm-charts/oracle-db/templates/: pvc.yaml
